--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generates a site with mp4, webm and ogg for small video clips",
   "author": "Ben Elsen <mail@benelsen.com>",
   "main": "index.js",
-  "bin" : "./index.js",
+  "bin": "./index.js",
   "preferGlobal": true,
   "license": "ISC",
   "dependencies": {
@@ -14,6 +14,7 @@
     "moment": "^2.6.0",
     "mustache": "^0.8.1",
     "node-uuid": "^1.4.1",
+    "rsync": "^0.3.0",
     "slug": "^0.5.0"
   }
 }
