--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.6.0",
     "mustache": "^0.8.1",
     "node-uuid": "^1.4.1",
+    "open": "0.0.5",
     "rsync": "^0.3.0",
     "slug": "^0.5.0"
   }
